tests/baselines/reference/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.errors.txt
tests/cases/compiler/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts(7,7): error TS2415: Class 'C' incorrectly extends base class 'B'.
  Property 'myMethod' is private in type 'B' but not in type 'C'.


==== tests/cases/compiler/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts (1 errors) ====
    class A {
        private myMethod() { }
    }
    
    class B extends A { }
    
    class C extends B {
          ~
!!! error TS2415: Class '{|C|0|}' incorrectly extends base class '{|B|1|}'.
!!! error TS2415:   Property 'myMethod' is private in type 'B' but not in type 'C'.
!!! annotated symbol 0 tests/cases/compiler/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts:7:7
!!! annotated symbol 1 tests/cases/compiler/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts:5:7
        public myMethod() { }
    }
    